<resources>
    <string name="app_name">BookShelf</string>
    <!-- Error Messages -->
    <string name="unknown_error">Unknown Error</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="logged_out_successfully">Logged out Successfully</string>
    <string name="email_does_not_exist">Email does not exist</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="update_empty_label_error">Update Failed! New label cannot be empty</string>
    <string name="add_empty_label_error">Label cannot be empty</string>

    <!-- Form Fields -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="select_country">Select Country</string>
    <string name="other">Other</string>

    <!-- Actions -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_new_account">Create a new account</string>
    <string name="sign_up">Sign up</string>
    <string name="edit_label">Edit Label</string>
    <string name="add_label">Add New Label</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <!-- Validation Messages -->
    <string name="valid_email">Valid Email</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_length_error">Password should be at least 8 characters long.</string>
    <string name="password_number_error">Password should contain at least one number.</string>
    <string name="password_special_char_error">Password should contain at least one special character from !@#$%&amp;().</string>
    <string name="password_lowercase_error">Password should contain at least one lowercase letter.</string>
    <string name="password_uppercase_error">Password should contain at least one uppercase letter.</string>
    <string name="valid_password">Valid Password</string>
    <string name="name_blank_error">Name cannot be blank or empty.</string>
    <string name="name_invalid_chars_error">Name should only contain letters and spaces.</string>
    <string name="name_too_long_error">Name is too long.</string>
    <string name="name_too_short_error">Name is too short.</string>
    <string name="valid_name">Valid name</string>

    <!--Content Description -->
    <string name="book_cover_picture">Book cover picture</string>
    <string name="favourite_icon">Favourite icon</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="image_thumbnail">Image thumbnail</string>

</resources>